Analytics and Updated Data clients

--- a/Views/Finance/Create.cshtml
+++ b/Views/Finance/Create.cshtml
@@ -35,15 +35,13 @@
                             <span asp-validation-for="ClientName" class="text-danger"></span>
                         </div>
                     </div>
-
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label asp-for="PermitType" class="control-label"></label>
-                            <input asp-for="PermitType" class="form-control" placeholder="Enter permit type" />
-                            <span asp-validation-for="PermitType" class="text-danger"></span>
+                            <label asp-for="TypeOfClient" class="control-label"></label>
+                            <input asp-for="TypeOfClient" class="form-control" placeholder="Enter type of client (optional)" />
+                            <span asp-validation-for="TypeOfClient" class="text-danger"></span>
                         </div>
                     </div>
-
                     <div class="col-md-6">
                         <div class="form-group">
                             <label asp-for="ContactNumber" class="control-label"></label>
@@ -51,7 +49,6 @@
                             <span asp-validation-for="ContactNumber" class="text-danger"></span>
                         </div>
                     </div>
-
                     <div class="col-md-6">
                         <div class="form-group">
                             <label asp-for="Email" class="control-label"></label>
@@ -59,7 +56,6 @@
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
                     </div>
-
                     <div class="col-md-12">
                         <div class="form-group">
                             <label asp-for="Address" class="control-label"></label>
