--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,8 +23,8 @@
                         {
                             <tr>
                                 <td title="@client.ClientName">@client.ClientName</td>
-                                <td title="@client.PermitType">@client.PermitType</td>
-                                <td title="@client.Address">@client.Address</td>
+                                <td title="@client.TypeOfProject">@client.TypeOfProject</td>
+                                <td title="@client.RegisteredCompanyAddress">@client.RegisteredCompanyAddress</td>
                             </tr>
                         }
                     }
@@ -56,8 +56,8 @@
                         {
                             <tr>
                                 <td title="@client.ClientName">@client.ClientName</td>
-                                <td title="@client.PermitType">@client.PermitType</td>
-                                <td title="@client.Address">@client.Address</td>
+                                <td title="@client.TypeOfProject">@client.TypeOfProject</td>
+                                <td title="@client.RegisteredCompanyAddress">@client.RegisteredCompanyAddress</td>
                             </tr>
                         }
                     }
@@ -89,8 +89,8 @@
                         {
                             <tr>
                                 <td title="@client.ClientName">@client.ClientName</td>
-                                <td title="@client.PermitType">@client.PermitType</td>
-                                <td title="@client.Address">@client.Address</td>
+                                <td title="@client.TypeOfProject">@client.TypeOfProject</td>
+                                <td title="@client.RegisteredCompanyAddress">@client.RegisteredCompanyAddress</td>
                             </tr>
                         }
                     }
@@ -122,8 +122,8 @@
                         {
                             <tr>
                                 <td title="@client.ClientName">@client.ClientName</td>
-                                <td title="@client.PermitType">@client.PermitType</td>
-                                <td title="@client.Address">@client.Address</td>
+                                <td title="@client.TypeOfProject">@client.TypeOfProject</td>
+                                <td title="@client.RegisteredCompanyAddress">@client.RegisteredCompanyAddress</td>
                             </tr>
                         }
                     }
@@ -155,8 +155,8 @@
                         {
                             <tr>
                                 <td title="@client.ClientName">@client.ClientName</td>
-                                <td title="@client.PermitType">@client.PermitType</td>
-                                <td title="@client.Address">@client.Address</td>
+                                <td title="@client.TypeOfProject">@client.TypeOfProject</td>
+                                <td title="@client.RegisteredCompanyAddress">@client.RegisteredCompanyAddress</td>
                             </tr>
                         }
                     }
