--- a/Views/PlanningOfficer/Details.cshtml
+++ b/Views/PlanningOfficer/Details.cshtml
@@ -37,26 +37,38 @@
                     </div>
                 </div>
                 <div class="card-body">
+                    <div class="row mb-3">
+                        <div class="col-12">
+                            <div class="alert alert-info d-flex align-items-center" role="alert">
+                                <i class="bi bi-diagram-3 me-2"></i>
+                                <strong>Project Type:</strong> @Model.TypeOfProject
+                                @if (!string.IsNullOrEmpty(Model.OtherTypeOfProject))
+                                {
+                                    <span class="ms-2">(<strong>Other:</strong> @Model.OtherTypeOfProject)</span>
+                                }
+                            </div>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-md-6">
                             <dl class="row">
                                 <dt class="col-sm-4">@Html.DisplayNameFor(model => model.ClientName)</dt>
                                 <dd class="col-sm-8">@Html.DisplayFor(model => model.ClientName)</dd>
 
-                                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.ContactNumber)</dt>
-                                <dd class="col-sm-8">@Html.DisplayFor(model => model.ContactNumber)</dd>
+                                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.ContactPersonNumber)</dt>
+                                <dd class="col-sm-8">@Html.DisplayFor(model => model.ContactPersonNumber)</dd>
 
                                 <dt class="col-sm-4">@Html.DisplayNameFor(model => model.Email)</dt>
                                 <dd class="col-sm-8">@Html.DisplayFor(model => model.Email)</dd>
 
-                                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.Address)</dt>
-                                <dd class="col-sm-8">@Html.DisplayFor(model => model.Address)</dd>
+                                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.RegisteredCompanyAddress)</dt>
+                                <dd class="col-sm-8">@Html.DisplayFor(model => model.RegisteredCompanyAddress)</dd>
                             </dl>
                         </div>
                         <div class="col-md-6">
                             <dl class="row">
-                                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.PermitType)</dt>
-                                <dd class="col-sm-8">@Html.DisplayFor(model => model.PermitType)</dd>
+                                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.TypeOfProject)</dt>
+                                <dd class="col-sm-8">@Html.DisplayFor(model => model.TypeOfProject)</dd>
 
                                 <dt class="col-sm-4">@Html.DisplayNameFor(model => model.UrgencyLevel)</dt>
                                 <dd class="col-sm-8">
@@ -91,6 +103,207 @@
                                 </dd>
                             </dl>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card shadow mb-4">
+                <!-- Project Type Details Accordion (collapsible) -->
+                <div class="accordion mb-3" id="projectTypeAccordion">
+                    <div class="accordion-item">
+                        @if (Model.TypeOfProject == "Retainership - SPP" && Model.RetainershipSPP != null)
+                        {
+                            <div class="card mb-3 border-info">
+                                <div class="accordion" id="projectTypeAccordion">
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="projectTypeHeading">
+                                            <button class="accordion-button collapsed bg-info text-white fw-bold"
+                                                type="button" data-bs-toggle="collapse"
+                                                data-bs-target="#projectTypeCollapse" aria-expanded="false"
+                                                aria-controls="projectTypeCollapse">
+                                                <i class="bi bi-file-earmark-text"></i> Retainership - SPP Details
+                                            </button>
+                                        </h2>
+                                        <div id="projectTypeCollapse" class="accordion-collapse collapse"
+                                            aria-labelledby="projectTypeHeading" data-bs-parent="#projectTypeAccordion">
+                                            <div class="accordion-body row g-3">
+                                                <div class="col-md-6">
+                                                    <b>SSS Company Registration No.:</b>
+                                                    @Model.RetainershipSPP.SSSCompanyRegNo
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Date of SSS Registration:</b>
+                                                    @Model.RetainershipSPP.SSSRegistrationDate?.ToString("yyyy-MM-dd")
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>PHIC Company Registration No.:</b>
+                                                    @Model.RetainershipSPP.PHICCompanyRegNo
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Date of PHIC Registration:</b>
+                                                    @Model.RetainershipSPP.PHICRegistrationDate?.ToString("yyyy-MM-dd")
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>HDMF Company Registration No.:</b>
+                                                    @Model.RetainershipSPP.HDMFCompanyRegNo
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Date of HDMF Registration:</b>
+                                                    @Model.RetainershipSPP.HDMFRegistrationDate?.ToString("yyyy-MM-dd")
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Maintenance of SPP Compliance:</b>
+                                                    @Model.RetainershipSPP.SPPComplianceActivities
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Other SPP Compliance:</b> @Model.RetainershipSPP.OtherSPPCompliance
+                                                </div>
+                                                <div class="col-md-12">
+                                                    <b>Target Date to Start Subscription - SPP Retainership:</b>
+                                                    @Model.RetainershipSPP.SPPRetainershipStartDate?.ToString("yyyy-MM-dd")
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                        else if (Model.TypeOfProject == "Retainership - BIR" && Model.RetainershipBIR != null)
+                        {
+                            <div class="card mb-3 border-primary">
+                                <div class="accordion" id="projectTypeAccordion">
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="projectTypeHeading">
+                                            <button class="accordion-button collapsed bg-primary text-white fw-bold"
+                                                type="button" data-bs-toggle="collapse"
+                                                data-bs-target="#projectTypeCollapse" aria-expanded="false"
+                                                aria-controls="projectTypeCollapse">
+                                                <i class="bi bi-file-earmark-text"></i> Retainership - BIR Details
+                                            </button>
+                                        </h2>
+                                        <div id="projectTypeCollapse" class="accordion-collapse collapse"
+                                            aria-labelledby="projectTypeHeading" data-bs-parent="#projectTypeAccordion">
+                                            <div class="accordion-body row g-3">
+                                                <div class="col-md-6">
+                                                    <b>Type of Registrant:</b> @Model.RetainershipBIR.TypeOfRegistrant
+                                                </div>
+                                                <div class="col-md-6"><b>OCN Number Notes:</b>
+                                                    @Model.RetainershipBIR.OCNNotes</div>
+                                                <div class="col-md-6">
+                                                    <b>Date OCN Generated:</b>
+                                                    @Model.RetainershipBIR.DateOCNGenerated?.ToString("yyyy-MM-dd")
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Date of BIR Registration:</b>
+                                                    @Model.RetainershipBIR.DateBIRRegistration?.ToString("yyyy-MM-dd")
+                                                </div>
+                                                <div class="col-md-6"><b>BIR RDO No.:</b> @Model.RetainershipBIR.BIRRdoNo
+                                                </div>
+                                                <div class="col-md-6"><b>Other BIR RDO No.:</b>
+                                                    @Model.RetainershipBIR.OtherBirRdoNo</div>
+                                                <div class="col-md-6">
+                                                    <b>Status of Tax Filing:</b> @Model.RetainershipBIR.TaxFilingStatus
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Catch-Up Accounting Needed?:</b>
+                                                    @Model.RetainershipBIR.NeedCatchUpAccounting
+                                                </div>
+                                                <div class="col-md-6"><b>Catch-Up Reasons:</b>
+                                                    @Model.RetainershipBIR.CatchUpReasons</div>
+                                                <div class="col-md-6">
+                                                    <b>Other Catch-Up Reason:</b>
+                                                    @Model.RetainershipBIR.OtherCatchUpReason
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Target Date to Start Catch-Up Accounting:</b>
+                                                    @Model.RetainershipBIR.CatchUpStartDate?.ToString("yyyy-MM-dd")
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>BIR Compliance Activities:</b>
+                                                    @Model.RetainershipBIR.BIRComplianceActivities
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Other BIR Compliance:</b> @Model.RetainershipBIR.OtherBIRCompliance
+                                                </div>
+                                                <div class="col-md-12">
+                                                    <b>Target Date to Start Subscription - BIR Retainership:</b>
+                                                    @Model.RetainershipBIR.BIRRetainershipStartDate?.ToString("yyyy-MM-dd")
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                        else if (Model.TypeOfProject == "One Time Transaction" && Model.OneTimeTransaction != null)
+                        {
+                            <div class="card mb-3 border-warning">
+                                <div class="accordion" id="projectTypeAccordion">
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="projectTypeHeading">
+                                            <button class="accordion-button collapsed bg-warning text-dark fw-bold"
+                                                type="button" data-bs-toggle="collapse"
+                                                data-bs-target="#projectTypeCollapse" aria-expanded="false"
+                                                aria-controls="projectTypeCollapse">
+                                                <i class="bi bi-file-earmark-text"></i> One Time Transaction Details
+                                            </button>
+                                        </h2>
+                                        <div id="projectTypeCollapse" class="accordion-collapse collapse"
+                                            aria-labelledby="projectTypeHeading" data-bs-parent="#projectTypeAccordion">
+                                            <div class="accordion-body row g-3">
+                                                <div class="col-md-6">
+                                                    <b>Type of Registrant:</b> @Model.OneTimeTransaction.TypeOfRegistrant
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Area of Services:</b> @Model.OneTimeTransaction.AreaOfServices
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Other Area of Services:</b>
+                                                    @Model.OneTimeTransaction.OtherAreaOfServices
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                        else if (Model.TypeOfProject == "External Audit" && Model.ExternalAudit != null)
+                        {
+                            <div class="card mb-3 border-secondary">
+                                <div class="accordion" id="projectTypeAccordion">
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="projectTypeHeading">
+                                            <button class="accordion-button collapsed bg-secondary text-white fw-bold"
+                                                type="button" data-bs-toggle="collapse"
+                                                data-bs-target="#projectTypeCollapse" aria-expanded="false"
+                                                aria-controls="projectTypeCollapse">
+                                                <i class="bi bi-file-earmark-text"></i> External Audit Details
+                                            </button>
+                                        </h2>
+                                        <div id="projectTypeCollapse" class="accordion-collapse collapse"
+                                            aria-labelledby="projectTypeHeading" data-bs-parent="#projectTypeAccordion">
+                                            <div class="accordion-body row g-3">
+                                                <div class="col-md-6">
+                                                    <b>Status of External Audit Client:</b>
+                                                    @Model.ExternalAudit.ExternalAuditStatus
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>External Audit - Purposes of Client:</b>
+                                                    @Model.ExternalAudit.ExternalAuditPurposes
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Other Purpose:</b> @Model.ExternalAudit.ExternalAuditOtherPurpose
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <b>Target Date of Issuance of Report:</b>
+                                                    @Model.ExternalAudit.ExternalAuditReportDate?.ToString("yyyy-MM-dd")
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        }
                     </div>
                 </div>
             </div>
